data/derived/sp14/progs/unify/prog3481.ml.out
Characters 24-25:
  let _ = pipe [(fun x -> x + x); (fun x -> x + 3)] 3;;
                          ^
Error: This expression has type int -> int
       but an expression was expected of type int
